TLH-11447 added changes on create alert
